Add new recipe page: Strogonoff
Page for the Strogonoff recipe added and linked in the index.

--- a/recipes/strogonoff.html
+++ b/recipes/strogonoff.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/strogonoff.html">Strogonoff ao Vinho do Porto</a>
-
+    <h1>Strogonoff ao Vinho do Porto</h1>
 </body>
 </html>
