Add instructions for recipe page: Strogonoff
Added picture, description, ingredients and steps for the recipe inside the strogonoff.html file.

--- a/recipes/strogonoff.html
+++ b/recipes/strogonoff.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>Strogonoff ao Vinho do Porto</h1>
+    <img src="../imgs/strogonoff.jpg" alt="Imagem de um Strogonoff ao Vinho">
+    <h3>Description</h3>
+    <p>This is a <strong>delicious</strong> Strogonoff recipe you can eat with your friends.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Carne;</li>
+        <li>Nata;</li>
+        <li>Vinho do Porto;</li>
+        <li>And everything that's good!</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Cook the Carne;</li>
+        <li>Add the Nata;</li>
+        <li>Drink the Vinho do Porto;</li>
+        <li>Be haaaaaappy.</li>
+    </ol>
+
 </body>
 </html>
