--- a/recipes/strogonoff.html
+++ b/recipes/strogonoff.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Strogonoff ao Vinho do Porto</title>
 </head>
 <body>
     <h1>Strogonoff ao Vinho do Porto</h1>
